[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/get_animplayer_frame_millis/Dock.gd" type="Script" id=1]

[node name="Frame Millis" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 156.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 299.0
size_flags_horizontal = 3
custom_constants/separation = 9

[node name="LblAnimationName" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
text = "Current Animation: None"
autowrap = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 23.0
margin_right = 1024.0
margin_bottom = 27.0

[node name="OptionButtonAnimList" type="OptionButton" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 56.0
text = "- - -"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 1024.0
margin_bottom = 69.0

[node name="OptionButtonTracksList" type="OptionButton" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 1024.0
margin_bottom = 98.0
text = "- - -"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 107.0
margin_right = 1024.0
margin_bottom = 111.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 1024.0
margin_bottom = 140.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 51.0
margin_bottom = 17.0
text = "Frames:"

[node name="LblAnimTotalTime" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 55.0
margin_top = 3.0
margin_right = 956.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Time: 00ms"
align = 1

[node name="BtnCopyFramesData" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 960.0
margin_right = 1024.0
margin_bottom = 20.0
disabled = true
text = "Copy All"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 149.0
margin_right = 1024.0
margin_bottom = 299.0
rect_min_size = Vector2( 0, 150 )
follow_focus = true
scroll_vertical_enabled = false

[node name="HFlowContainerFrames" type="HFlowContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1024.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="item_selected" from="VBoxContainer/OptionButtonAnimList" to="." method="_on_OptionButtonAnimList_item_selected"]
[connection signal="item_selected" from="VBoxContainer/OptionButtonTracksList" to="." method="_on_OptionButtonTracksList_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/BtnCopyFramesData" to="." method="_on_BtnCopyFramesData_pressed"]
